tests/data/execute_code/valid_python_short/robot.py
"""A short, valid Python program."""
print("Hello World")
