tests/data/execute_code/syntax_error/robot.py
print("Hello World"))  # noqa: E902